# Xrash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  build_android.sh  build_lib_ios.sh  build_lib_linux.sh  build_lib_windows.bat  build_libs_windows.bat  build_linux.sh  iOS-symbolicate-wrong-line.md  setup_xcode_project.sh  sybolicatereport.py
Android/: build.gradle
Android/src/main/: AndroidManifest.xml
Android/src/main/java/com/piasy/crash/: MainActivity.java
Android/src/main/java/com/piasy/crash/example/: MainActivity.java
Android/src/main/res/layout/: activity_main.xml
Linux/: CrashExample.cpp  run.sh
LinuxExample/: run.sh
Windows/: Win32Example.sln
Windows/Win32Example/: Resource.h  Win32Example.cpp  Win32Example.rc  Win32Example.vcxproj  Win32Example.vcxproj.filters
gradle/wrapper/: gradle-wrapper.properties
iOS/: project.yml  strip_simulator_arch.sh
iOS/CrashExample/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
libs/: crash.lib
libs/crash.framework/: Info.plist  crash
libs/crash.framework.dSYM/Contents/: Info.plist
src/: crash.cpp  crash.h  crash_define.h  crash_jni.cpp  crash_test.h  crash_test.mm
symbols/crash.framework.dSYM/Contents/Resources/DWARF/: crash
symbols/linux_x64/: libcrash.so.sym
symbols/win_x86/: crash.sym
tools/: minidump_stackwalk  symbolicatereport.py  symbolicatexcode.py  walk_stack.py
